--- a/src/app/modules/pokemon/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/modules/pokemon/pages/pokemon-list/pokemon-list.component.html
@@ -1,14 +1,15 @@
-<header class="pokemon-list-view__header">
-    <h1>YaPokedex!</h1>
-    <div class="pokemon-list-view__search">
-      <poke-search-form (pokeSearch)="showPokemonModal($event)"></poke-search-form>
-    </div>
+<header class="pokemon-list__header">
+  <h1>YaPokedex!</h1>
+  <div class="pokemon-list__search">
+    <poke-search-form (pokeSearch)="showPokemonModal($event)"></poke-search-form>
+  </div>
 </header>
-<poke-list-view [items]="pokemons$ | async" [pageIndex]="pageIndex$ | async" (page)="pageChanged($event)">
-    <ng-template let-item>
-        <div class="pokemon-list-view__card" (click)="showPokemonModal(item.id)">
-            <div class="pokemon-list-view__card-header">{{ item.name | titlecase }}</div>
-        </div>
-    </ng-template>
+<poke-list-view (page)="pageChanged($event)" [items]="pokemons$ | async" [length]="100" [pageIndex]="pageIndex$ | async"
+                [pageSize]="10" class="pokemon-list__view">
+  <ng-template let-item>
+    <div (click)="showPokemonModal(item.id)" class="pokemon-list__card">
+      <div class="pokemon-list__card-header">{{ item.name | titlecase }}</div>
+    </div>
+  </ng-template>
 </poke-list-view>
 <router-outlet></router-outlet>
