Add config file to set max Pokemon id and page size

--- a/src/app/modules/pokemon/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/modules/pokemon/pages/pokemon-list/pokemon-list.component.html
@@ -4,8 +4,9 @@
     <poke-search-form (pokeSearch)="showPokemonModal($event)"></poke-search-form>
   </div>
 </header>
-<poke-list-view (page)="pageChanged($event)" [items]="pokemons$ | async" [length]="100" [pageIndex]="pageIndex$ | async"
-                [pageSize]="10" class="pokemon-list__view">
+<poke-list-view (page)="pageChanged($event)" [items]="pokemons$ | async" [length]="length"
+                [pageIndex]="pageIndex$ | async"
+                [pageSize]="pageSize" class="pokemon-list__view">
   <ng-template let-item>
     <div (click)="showPokemonModal(item.id)" class="pokemon-list__card">
       <div class="pokemon-list__card-header">{{ item.name | titlecase }}</div>
